# P1_group2_2024

./: .gitignore  README.md  backcasting.md  h_map_utils.c  h_map_utils.h  read_stations.c  run_project.sh  search.c
DataScrape/: 1_rejseplanen_scrape.py  2_toDataset.py  3_paastiger_antal.py  DepatureBoardScrape.py  How to rejseplanen API.md  Visualize.py  dataset.txt  key.txt  newDataset.txt  paastiger_data.csv  paastiger_formater.py  toDataset.py
DataScrape/JourneyDetail_data/: IC 152.json  IC 160.json  IC 165.json  IC 173.json  IC 4172.json  IC 4361.json  IC 460.json  IC 70164.json  IC 70854.json  IC 70875.json  IC 8466.json  ICL 4055.json  ICL 4059.json  ICL 4070.json  ICL 763.json  RA 5075.json  RA 5179.json  RA 5183.json  RA 5377.json  RA 5487.json  RA 5572.json  Re 1113.json  Re 1115.json  Re 1116.json  Re 1117.json  Re 1118.json  Re 1119.json  Re 1120.json  Re 1122.json  Re 1554.json  Re 1571.json  Re 2452.json  Re 2475.json  (+21 more)
Viz/: Coordinates.csv  Testegdes.txt  Visualize.py  Visualize_map.py  Visualize_no_map.py  Visualtestdata.py  dataset.csv  genList_st_w_coord.py  output.txt
program/: CMakeLists.txt  README.md  a.out  data_to_graph.c  data_to_graph.h  dataset.txt  fully_connected_graph.txt  main.c  newDataset.txt  output.csv  output.txt  shortest_path.c  shortest_path.h  traverse.c  traverse.h
program/Playground/LinkedList/: NotesLinkedlist.md  doublyLL.c  linkedlist.c  linkedlist_nik.h
program/Playground/UnD_graphs/: BFS.c  DFS.c  TopologicalSort.c  dfs  udg
program/Playground/h_map_util/: search.c
program/min_heap/: a.out  min_heap.c  min_heap.h
(+42 files in other folders)
